Added calendar to signature.

--- a/dotfiles/signature.WORK.HTML
+++ b/dotfiles/signature.WORK.HTML
@@ -1,5 +1,7 @@
 <font color="#000066" size="-1">
 <a href="http://www.unh.edu/research/staff-directory/knight-steven">Steven Knight</a><br/>Software Engineer, 
 <a href="http://www.unh.edu/research/support-units/research-computing-instrumentation">Research Computing &amp; Instrumentation</a>
-<br>(603)-862-3042
+<br/>(603)-862-3042
+<br/>    
+<a href="https://www.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23FFFFFF&src=stevenknight1980%40gmail.com&color=%23060D5E&src=02388ju54civ56dklbv8n8tihk%40group.calendar.google.com&color=%235C1158&ctz=America%2FNew_York">Steven's Calendar</a>
 </font>
